fix mobile horizontal scrolling bug

--- a/src/components/entry/category/nomineesGrid/NomineesGrid.css
+++ b/src/components/entry/category/nomineesGrid/NomineesGrid.css
@@ -10,4 +10,9 @@
   flex-wrap: nowrap;
   overflow-x: auto;
   margin: 0 -16px;
+  -webkit-overflow-scrolling: touch;
+}
+
+.NomineesGrid--list::-webkit-scrollbar {
+  display: none;
 }
